fix: adapt merged UI for 1.20.1 APIs